--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ ExportedObj/
 *.booproj
 *.svd
 *.pdb
+*.dll
 
 # Unity3D generated meta files
 *.pidb.meta
@@ -32,3 +33,5 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+# 
